# LHK_Framework

./: .gitmodules  CMakeLists.txt  README.md
LIHONGKE/: CMakeLists.txt
LIHONGKE/src/: LIHONGKE_mainWindows.cpp  LIHONGKE_mainWindows.h  main.cpp
LIHONGKE/src/style/: StyleConfig_Base.hpp  Style_QTabWidget.hpp  Style_main.cpp  Style_main.hpp
LIHONGKE/ui_templates/: LIHONGKE_mainWindows.ui
libs/: CMakeLists.txt
libs/GraphicsRenderer/: CMakeLists.txt
libs/GraphicsRenderer/GraphicsRenderer/: CMakeLists.txt
libs/GraphicsRenderer/GraphicsRenderer/include/GraphicsRenderer/: GraphicsRenderer_Interface.hpp
libs/GraphicsRenderer/cmake/: arm-toolchain.cmake
libs/GraphicsRenderer/libs/: CMakeLists.txt
libs/GraphicsRenderer/libs/ImageROI/: CMakeLists.txt
libs/GraphicsRenderer/libs/ImageROI/ImageROI/: CMakeLists.txt
libs/GraphicsRenderer/libs/ImageROI/ImageROI/include/ImageROI/: ImageROI_interface.hpp
libs/GraphicsRenderer/libs/ImageROI/ImageROI/src/: ImageROI_Base.cpp  ImageROI_Base.hpp  ImageROI_Rectangular.cpp  ImageROI_Rectangular.hpp
libs/GraphicsRenderer/libs/ImageRenderer/: CMakeLists.txt
libs/GraphicsRenderer/libs/ImageRenderer/ImageRenderer/: CMakeLists.txt
libs/GraphicsRenderer/libs/ImageRenderer/ImageRenderer/include/ImageRenderer/: ImageRenderer.hpp
libs/GraphicsRenderer/libs/ImageRenderer/ImageRenderer/res/: Res.qrc
libs/GraphicsRenderer/libs/ImageRenderer/ImageRenderer/src/: ImageGraphicsScene.cpp  ImageGraphicsScene.hpp  ImageGraphicsView.cpp  ImageGraphicsView.hpp  ImageRenderer.cpp  ImageRenderer.h
libs/GraphicsRenderer/libs/ImageRenderer/ImageRenderer/ui_templates/: ImageRenderer.ui
libs/GraphicsRenderer/libs/ImageRenderer/test/: CMakeLists.txt  main.cpp
libs/framework/: CMakeLists.txt
libs/framework/framework/: CMakeLists.txt
libs/framework/framework/include/framework/: Wid_Framework.hpp
libs/framework/framework/src/: Wid_Framework.cpp  Wid_Framework.h
libs/framework/framework/ui_templates/: Wid_Framework.ui
libs/framework/libs/: CMakeLists.txt
libs/framework/libs/Framework_Data/: CMakeLists.txt
libs/framework/libs/Framework_Data/include/Framework_Data/: data.hpp
libs/framework/libs/Framework_Data/src/: Data_Double.hpp  Data_Image.hpp
libs/framework/libs/Framework_Plugin/: CMakeLists.txt
libs/framework/libs/Framework_Plugin/Framework_Plugin_ImageScience/: CMakeLists.txt
libs/framework/libs/Framework_Plugin/Framework_Plugin_ImageScience/src/: Template.cpp  Template.hpp
libs/framework/libs/Framework_Plugin/Framework_Plugin_ImageScience/src/Model_ImageDisplay/: Model_ImageDisplay.cpp  Model_ImageDisplay.hpp
libs/framework/libs/Framework_Plugin/Framework_Plugin_ImageScience/src/Model_ImageLoader/: Model_ImageLoader.cpp  Model_ImageLoader.hpp
libs/framework/libs/Framework_Plugin/Framework_Plugin_ImageScience/src/Model_ImagePreprocessing/: Model_Base_ImagePreprocessing.cpp  Model_Base_ImagePreprocessing.hpp  Model_ImagePreprocessing_output.hpp  README.md
libs/framework/libs/Framework_Plugin/Framework_Plugin_ImageScience/src/Model_ImagePreprocessing/Model_GlobalBinaryThresholding/: Model_GlobalBinaryThresholding.cpp  Model_GlobalBinaryThresholding.hpp
libs/framework/libs/Framework_Plugin/Framework_Plugin_operations/: CMakeLists.txt
libs/framework/libs/Framework_Plugin/Framework_Plugin_operations/include/Framework_Plugin_operations/: Template.hpp
libs/framework/libs/Framework_Plugin/Framework_Plugin_operations/src/: Model_MathOperation.cpp  Model_MathOperation.hpp  Model_MathOperation_Multiplication.hpp  Model_NumberDisplay.cpp  Model_NumberDisplay.hpp  Model_NumberSet.cpp  Model_NumberSet.hpp  Template.cpp
libs/framework/test/: CMakeLists.txt  main.cpp
